Fix apparent alignment of icons ('apparent' because the actual alignment was fine but they looked off)

--- a/src/components/shoppingListItem/shoppingListItem.module.css
+++ b/src/components/shoppingListItem/shoppingListItem.module.css
@@ -61,7 +61,7 @@
 .editIcons {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding: 4px 8px;
+  padding: 0 8px 4px;
 }
 
 .icon {
